@@ -1,3 +1,9 @@
+Thu Jan 13 09:26:16 UTC 2011  Olli Savia  <ops@iki.fi>
+
+        * orbsvcs/tests/unit/Notify/MC/MonitorControlExt/MonitorControlExt.cpp:
+        * tests/Param_Test/big_union.cpp:
+          Use ACE::is_equal() to compare floating point values.
+
 Wed Jan 12 21:08:04 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * TAO_IDL/ast/ast_component.cpp:
